every network interaction is encrypted by tls1.3, still need password hashing and sql injection protection...

--- a/backend/django/Dockerfile
+++ b/backend/django/Dockerfile
@@ -6,13 +6,16 @@
 #    By: mguerga <mguerga@42lausanne.ch>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/12 19:25:50 by mguerga           #+#    #+#              #
-#    Updated: 2024/08/02 18:14:18 by mguerga          ###   ########.fr        #
+#    Updated: 2024/08/12 14:43:34 by mguerga          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 FROM python:3.12-slim
 
 ENV	PYTHONUNBUFFERED 1
+
+COPY create_certs.sh /.
+
 
 COPY requirements.txt .
 COPY ./mysite /mysite2
@@ -22,7 +25,8 @@ COPY ./pong /pong
 RUN apt-get update && \
 	apt-get install wait-for-it && \
 	pip install --upgrade pip && \
-	pip install --no-cache-dir -r requirements.txt
+	pip install --no-cache-dir -r requirements.txt && \
+	sh /create_certs.sh	
 
 EXPOSE 8001
 
