--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -18,7 +18,7 @@ server {
 	#include /etc/nginx/mime.types;
 	
     location / {
-        proxy_pass http://mysite;
+        proxy_pass https://mysite;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Referer $http_referer;
         proxy_set_header Host $host;
