--- a/backend/postgres/postgresql.conf
+++ b/backend/postgres/postgresql.conf
@@ -105,17 +105,17 @@ max_connections = 100			# (change requires restart)
 
 # - SSL -
 
-#ssl = on
+ssl = on
 #ssl_ca_file = ''
-#ssl_cert_file = 'server.crt'
+ssl_cert_file = '/cert.pem'
 #ssl_crl_file = ''
 #ssl_crl_dir = ''
-#ssl_key_file = 'server.key'
+ssl_key_file = '/cert.key'
 #ssl_ciphers = 'HIGH:MEDIUM:+3DES:!aNULL' # allowed SSL ciphers
 #ssl_prefer_server_ciphers = on
 #ssl_ecdh_curve = 'prime256v1'
-#ssl_min_protocol_version = 'TLSv1.2'
-#ssl_max_protocol_version = ''
+ssl_min_protocol_version = 'TLSv1.2'
+ssl_max_protocol_version = 'TLSv1.3'
 #ssl_dh_params_file = ''
 #ssl_passphrase_command = ''
 #ssl_passphrase_command_supports_reload = off
